correction commit practice 8 9 10 13 14

--- a/practice10.html
+++ b/practice10.html
@@ -27,7 +27,7 @@
     <footer class="color-blue">
         <section class="about"><strong>About us</strong></section>
         <section class="support"><strong>Support</strong></section>
-        <section class="social-c"><strong>Social <br>Connet</strong></section></section>
+        <section class="social-c"></strong>Social <br>Connect</strong></section></section>
     </footer>
 </body>
 
